<resources>
    <string name="app_name">CookMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CookMaster</string>
    <string name="nav_header_subtitle">cookmaster@cookmaster.coc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_receptes">Receptes</string>
    <string name="menu_novarecepta">Nova Recepta</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="logIn_button">Log in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registre">"Si no tens compte registrat aquí"</string>
    <string name="nom_usuari">"Username"</string>
    <string name="contrasenya">"Password"</string>
    <string name="nova_contrasenya">"New password"</string>
    <string name="rn_contrasenya">"Repeat new password"</string>
    <string name="r_contrasenya">"Repeat new password"</string>
    <string name="signup">"Sign Up"</string>
    <string name="apply">"Change Password"</string>
    <string name="delete">"Delete account"</string>
    <string name="sortir">"L'usuari s'ha eliminat correctament"</string>
    <string name="Bsortir">"Surt de l'aplicació"</string>
    <string name="contrasenya_inc">"Error al canviar la contrasenya"</string>
    <string name="canvis">"Els canvis s'han aplicat correctament"</string>
    <string name="goback">"Go back"</string>
    <string name="user">"Escriu el nou nom d'usuari"</string>

    <string name="recepta">Recepta</string>
    <string name="preparacio">Preparació:</string>
    <string name="nom">Nom:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="publica">Publica</string>
    <string name="upFoto">Clica per pujar foto</string>
    <string name="calories">Calories:</string>


    <string name="calendari">Calendari</string>
    <string name="dia">Dia</string>
    <string name="dinar">Dinar</string>
    <string name="sopar">Sopar</string>

    <string name="dilluns">Dilluns</string>
    <string name="dimarts">Dimarts</string>
    <string name="dimecres">Dimecres</string>
    <string name="dijous">Dijous</string>
    <string name="divendres">Divendres</string>
    <string name="dissabte">Dissabte</string>
    <string name="diumenge">Diumenge</string>

    <string name="newusername">Change username</string>
    <string name="logout">Log Out</string>
</resources>