<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookmaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_receptes3"
            app:destination="@id/nav_receptes" />
    </fragment>

    <fragment
        android:id="@+id/nav_receptes"
        android:name="com.example.cookmaster.ui.receptes.ReceptesFragment"
        android:label="@string/menu_receptes"
        tools:layout="@layout/fragment_receptes" >
        <action
            android:id="@+id/action_nav_receptes_to_nav_recepta"
            app:destination="@id/nav_recepta" />
    </fragment>

    <fragment
        android:id="@+id/nav_novarecepta"
        android:name="com.example.cookmaster.ui.NovaRecepta.NovaReceptaFragment"
        android:label="@string/menu_novarecepta"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_recepta"
        android:name="com.example.cookmaster.ui.receptes.ReceptaFragment"
        android:label="@string/recepta"
        tools:layout="@layout/recepta_fragment" />
</navigation>