<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CookMaster.AppBarOverlay">

        <TextView
            android:id="@+id/titol"
            android:layout_width="411dp"
            android:layout_height="43dp"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/calendari"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.CookMaster.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:id="@+id/espai1"
                android:layout_width="wrap_content"
                android:layout_height="200dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/titol"
                android:layout_weight="33"
                android:id="@+id/dia_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dia" />

            <TextView
                style="@style/titol"
                android:layout_weight="33"
                android:id="@+id/dinar_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <TextView
                style="@style/titol"
                android:layout_weight="33"
                android:id="@+id/sopar_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:id="@+id/espai2"
                android:layout_width="wrap_content"
                android:layout_height="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/dilluns_btn"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dilluns" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dill"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dill"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/dimarts_btn"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dimarts" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dim"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dim"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/dimecres_btn"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dimecres" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dime"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dime"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/dijous_btn"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dijous" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dij"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dij"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/divendres_btn"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/divendres" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_div"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_div"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/dissabte_btn"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dissabte" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dis"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dis"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/boto_dia"
                android:id="@+id/diumenge_btn"
                android:layout_weight="33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/diumenge" />

            <Button
                style="@style/boto_dinar"
                android:id="@+id/dinar_dium"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/dinar" />

            <Button
                style="@style/boto_sopar"
                android:id="@+id/sopar_dium"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:text="@string/sopar" />
        </TableRow>
    </TableLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>